more pic compression, file optimization, and email address

--- a/services.html
+++ b/services.html
@@ -50,7 +50,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="agile-header">
 				<div class="agileits-contact-info text-right">
 					<ul>
-						<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><a href="mailto:info@example.com">mail@example.com</a></li>
+						<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><a href="mailto:tony@anthonyfalzon-law.com">tony@anthonyfalzon-law.com</a></li>
 						<li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>786 703 4181</li>
 						<li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>FAX 786 703 2961</li>
 					</ul>
@@ -140,7 +140,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 			<div class="agileits_w3layouts_team_grids w3ls_courses_grids">
 				<div class="col-md-6 agileits_courses_left">
-					<img src="services-img/unpaid-wages.jpeg" alt=" " class="img-responsive">
+					<img src="services-img/unpaid-wages.jpg" alt=" " class="img-responsive">
 				</div>
 				<div class="col-md-6 w3ls_banner_bottom_left w3ls_courses_right">
 					<div class="w3ls_courses_left_grids">
