--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="agile-header">
 				<div class="agileits-contact-info text-right">
 					<ul>
-						<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><a href="mailto:info@example.com">mail@example.com</a></li>
+						<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><a href="mailto:tony@anthonyfalzon-law.com">tony@anthonyfalzon-law.com</a></li>
 						<li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>786 703 4181</li>
 						<li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>FAX 786 703 2961</li>
 					</ul>
@@ -115,9 +115,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<h2 class="w3ls_head">Contact</h2>
 			<!-- <p class="w3layouts_para">Fusce quis leo in augue ultricies tincidunt a quis mi. Donec at massa nec sem eleifend fermentum.</p> -->
 			<div class="contact-right-w3-agile">
-			<form action="#" method="post">
-				<input type="text" name="Name" placeholder="Name" required="">
-				<input type="text" name="Number" placeholder="Phone" required="">
+			<form action="mailto:tony@anthonyfalzon-law.com" method="post" enctype="text/plain">
+				<input type="text" name="Name" placeholder="Name">
+				<input type="text" name="Number" placeholder="Phone">
 				<textarea name="Comments" placeholder="Message" required=""></textarea>
 				<input type="submit" value="Submit">
 			</form>
