--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 				<div class="agileits-contact-info text-right">
 					<ul>
-						<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><a href="mailto:info@example.com">mail@example.com</a></li>
+						<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><a href="mailto:tony@anthonyfalzon-law.com">tony@anthonyfalzon-law.com</a></li>
 						<li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>786 703 4181</li>
 						<li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>FAX 786 703 2961</li>
 					</ul>
