--- a/es/index.html
+++ b/es/index.html
@@ -190,7 +190,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 				</div>
 				<div class="col-md-6 agileits_courses_right">
-					<img src="../images/seated.jpg" alt=" " class="img-responsive">
+					<img src="../images/standing.jpg" alt=" " class="img-responsive">
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -291,12 +291,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="item-owl">
 						<div class="customer-say">
-							<div class="col-md-6 customer-grid">
+							<!-- <div class="col-md-6 customer-grid">
 								<div class="de_testi">
 									<div class="quotes"><img src="../images/daniel.jpg" alt=""></div>
 									<div class="de_testi_by">
 										<p> I have known Anthony for over 10 years. He is very well educated, conscientious and a diligent advocate. An excellent attorney!</p>
 										<a  id="names"href="#">Daniel Morman, Client </a>
+									</div>
+									<div class="clearfix"></div>
+								</div>
+							</div> -->
+							<div class="col-md-6 customer-grid">
+								<div class="de_testi">
+									<div class="quotes"><img src="../images/schainberg.jpg" alt=""></div>
+									<div class="de_testi_by">
+										<p>  I had a labor law case with Anthony in 2012. My case was against 2 powerful doctors and with Anthony's strength, knowledge and perseverance we won the case, against all odds. Anthony will be your voice and a strong advocate for all. I know from "personal" experience that Anthony will fight for you!!!</p>
+										<a  id="names"href="#">Linda Schainberg, Client </a>
 									</div>
 									<div class="clearfix"></div>
 								</div>
@@ -313,7 +323,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 						</div>
 					</div>
-					<div class="item-owl">
+					<!-- <div class="item-owl">
 						<div class="customer-say">
 							<div class="col-md-6 customer-grid">
 								<div class="de_testi">
@@ -326,7 +336,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 					<!-- <div class="item-owl">
 						<div class="customer-say">
 							<div class="col-md-6 customer-grid">
