--- a/it/services.html
+++ b/it/services.html
@@ -60,7 +60,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li class="agileinfo_share">Condividere</li>
 						<li><a href="https://www.facebook.com/falzonlaw/" class="wthree_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 						<!-- <li><a href="#" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
-						<li><a href="https://www.linkedin.com/in/anthony-falzon-3a124816" class="wthree_dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/anthony-falzon-3a124816" class="wthree_dribbble"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 
 					</ul>
 				</div>
