--- a/it/services.html
+++ b/it/services.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title>Aree Giuridiche || Falzon Attorney</title>
+	<link rel="icon" type="image/png" href="../images/favicon-gavel.ico" />
 	<!-- for-mobile-apps -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
