minor update to freddy blurb

--- a/freddy.html
+++ b/freddy.html
@@ -62,7 +62,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="w3ls_courses_left_grids">
             <h2 id="bio" class="w3ls_head">Dr. Freddy Tovar</h2>
 						<div class="w3ls_courses_left_grid">
-              <p>Freddy Tovar is a blingual doctor, qualified in Colombia, with thirty-five years of experience working in the medical services field.  He has experience working in emergency room trauma centers and spent many years working in the burn units of large hospitals in Bogota, Colombia.  Dr. Tovar was the Founder and President of the Colombian College of Medical Auditors. He presently works as a medical lecturer in a local vocational institute. He provides valuable experience to Mr. Falzon in evaluating the clinical history of clients for the purposes of presenting a client’s case to insurance  companies during presuit negotiations.</p>
+              <p>Freddy Tovar is a blingual doctor, qualified in Colombia, with thirty-five years of experience working in the medical services field.  He has experience working in emergency room trauma centers and spent many years working in the burn units of large hospitals in Bogota, Colombia.  Dr. Tovar was the Founder and President of the Colombian College of Medical Auditors. He presently works as a medical lecturer in a local vocational institute. He provides valuable experience to Mr. Falzon in evaluating the clinical history of clients for the purposes of presenting a client’s case to insurance  companies during presuit negotiations and during court proceedings.</p>
 						</div><br><br><br>
             <div>
               <h3 onclick="window.close()"><a href="services.html">CLOSE</a></h3>
