added freddy.html for spanish

--- a/es/freddy.html
+++ b/es/freddy.html
@@ -25,21 +25,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		}
 	</script>
 	<!-- //for-mobile-apps -->
-	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-	<link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" property="" />
-	<link rel="stylesheet" href="css/freddy.css" type="text/css" media="screen" property="" />
+	<link href="../css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="../css/style.css" rel="stylesheet" type="text/css" media="all" />
+	<link rel="stylesheet" href="../css/flexslider.css" type="text/css" media="screen" property="" />
+	<link rel="stylesheet" href="../css/freddy.css" type="text/css" media="screen" property="" />
 
 	<!-- js -->
-	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+	<script type="text/javascript" src="../js/jquery-2.1.4.min.js"></script>
 	<!-- //js -->
 	<!-- font-awesome icons -->
-	<link href="css/font-awesome.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="../css/font-awesome.css" rel="stylesheet" type="text/css" media="all" />
 	<!-- //font-awesome icons -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Oswald" rel="stylesheet">
 	<!-- start-smoth-scrolling -->
-	<script type="text/javascript" src="js/move-top.js"></script>
-	<script type="text/javascript" src="js/easing.js"></script>
+	<script type="text/javascript" src="../js/move-top.js"></script>
+	<script type="text/javascript" src="../js/easing.js"></script>
 	<script type="text/javascript">
 		jQuery(document).ready(function($) {
 			$(".scroll").click(function(event) {
@@ -62,7 +62,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="w3ls_courses_left_grids">
             <h2 id="bio" class="w3ls_head">Dr. Freddy Tovar</h2>
 						<div class="w3ls_courses_left_grid">
-              <p>Freddy Tovar is a bilingual doctor, qualified in Colombia, with thirty-five years of experience working in the medical services field.  He has experience working in emergency room trauma centers and spent many years working in the burn units of large hospitals in Bogota, Colombia.  Dr. Tovar was the Founder and President of the Colombian College of Medical Auditors. He presently works as a medical lecturer in a local vocational institute. He provides valuable experience to Mr. Falzon in evaluating the clinical history of clients for the purposes of presenting a client’s case to insurance  companies during presuit negotiations and during court proceedings.</p>
+              <p>Freddy Tovar es un medico colombiano bilingue con 35 anos de experiencia entre hospitalaria, urgencias, trauma y consultas externas.  Fundador y Presidente del Colegio Colombiano de Auditoria Medica.  Actualmente Freddy Tovar es professor en un colegio en area de la salud. Ha realizado evaluaciones de historias clinicas y peritazos legales en Colombia.  El ayuda el abogado Falzon evaluando la historia clinica de cada cliente para ayudar en las negociaciones con las companias de Seguro antes de empezar una causa en el tribunal.</p>
 						</div><br><br><br>
             <div>
               <h3 onclick="window.close()"><a href="services.html">CLOSE</a></h3>
@@ -70,7 +70,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 				</div>
 				<div class="col-md-6 agileits_courses_right">
-					<img src="images/freddy.jpg" alt=" " class="img-responsive">
+					<img src="../images/freddy.jpg" alt=" " class="img-responsive">
 				</div>
 				<div class="clearfix"> </div>
 			</div>
