change to link sentence on services.html

--- a/services.html
+++ b/services.html
@@ -130,7 +130,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="w3ls_courses_left_grid">
 							<h3><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Personal Injury and Accidents</h3>
 							<p>Anthony Falzon has represented hundreds of persons injured in a variety of accidents varying from motor vehicle claims, persons who have been injured by medical malpractice, employees injured in workplace accidents or consumers injured by defective machinery.  Mr. Falzon has obtained millions of dollars in compensation for his clients over the course of his career.  He will often take on challenging cases that are turned down by other firms.  In 2012 Mr. Falzon broke new ground nationwide when he successfully argued that juries in Florida should be allowed to award punitive damages against a driver who causes injuries while texting and driving.
-							<a href="freddy.html" rel="noopener noreferrer" target="_blank" >All personal injury claims are reviewed by a doctor who will professionally assess a client's medical records and history and assists in presenting your claim in the presuit process and in litigation.</a>
+							<a href="freddy.html" rel="noopener noreferrer" target="_blank" >All personal injury claims are reviewed by a medical doctor engaged by the firm to assess a client's medical records and clinical history in order to assist Mr. Falzon in presenting an injured client's claim in the presuit process and in litigation if the case does not settle presuit.</a>
 							</p>
 						</div>
 					</div>
