took down email link at top of pages and added twitter links

--- a/es/index.html
+++ b/es/index.html
@@ -59,7 +59,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 				<div class="agileits-contact-info text-right">
 					<ul>
-						<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><a href="mailto:tony@anthonyfalzon-law.com">tony@anthonyfalzon-law.com</a></li>
+						<!-- <li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><a href="mailto:tony@anthonyfalzon-law.com">tony@anthonyfalzon-law.com</a></li> -->
 						<li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>786 703 4181</li>
 						<li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>FAX 786 703 2961</li>
 					</ul>
@@ -68,7 +68,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<ul>
 						<li class="agileinfo_share">Compartir en</li>
 						<li><a href="https://www.facebook.com/falzonlaw/" class="wthree_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<!-- <li><a href="#" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>-->
+						<li><a href="https://twitter.com/falzonpa" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/anthony-falzon-3a124816" class="wthree_dribbble"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
@@ -428,8 +428,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="w3ls-social-icons">
         <h3>Síganos</h3>
         <a class="facebook" href="https://www.facebook.com/falzonlaw/"><i class="fa fa-facebook"></i></a>
-        <!-- <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
-        <a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a>-->
+        <a class="twitter" href="https://twitter.com/falzonpa"><i class="fa fa-twitter"></i></a>
+        <!-- <a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a> -->
         <a class="linkedin" href="https://www.linkedin.com/in/anthony-falzon-3a124816"><i class="fa fa-linkedin"></i></a>
       </div>
 			<div class="footer-w3layouts">
